mi segundo commit archivos

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ target/
 !.vscode/launch.json
 !.vscode/extensions.json
 
+.settings/*
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
